Eliminated non-functional example

--- a/train.ipynb
+++ b/train.ipynb
@@ -414,7 +414,7 @@
    "source": [
     "## Load the saved model and test it with dataset and one sample\n",
     "\n",
-    "Currently this tests Emmaton at a time when EC is 200-ish which is not a very compelling example. It also appears to use the same inputs as the test/training process. I have just left it in place, but without "
+    "Currently this tests Emmaton at a time when EC is 200-ish which is not a very compelling example. It also appears to use the same inputs as the test/training process, so the above example should cover it."
    ]
   },
   {
@@ -430,95 +430,7 @@
      ]
     }
    ],
-   "source": [
-    "def root_mean_squared_error(y_true, y_pred):\n",
-    "    y_true = tf.cast(y_true, tf.float32)\n",
-    "    return tf.keras.backend.sqrt(tf.keras.backend.mean(tf.keras.backend.square(y_pred - y_true)))\n",
-    "# Load the saved model\n",
-    "loaded_model = tf.keras.models.load_model(model_save_path, custom_objects={'root_mean_squared_error': root_mean_squared_error})\n",
-    "\n",
-    "\n",
-    "new_data = pd.read_csv('./Inputs/inputs.csv')\n",
-    "\n",
-    "# Eli note: Don't think it is used any more\n",
-    "num_features = [\n",
-    "    'sac', 'exports', 'dcc', 'net_dcd', 'sjr', 'tide', 'smscg', 'sac_1d', 'exports_1d', 'dcc_1d', \n",
-    "    'net_dcd_1d', 'sjr_1d', 'tide_1d', 'smscg_1d', 'sac_2d', 'exports_2d', 'dcc_2d', 'net_dcd_2d', \n",
-    "    'sjr_2d', 'tide_2d', 'smscg_2d', 'sac_3d', 'exports_3d', 'dcc_3d', 'net_dcd_3d', 'sjr_3d', 'tide_3d', \n",
-    "    'smscg_3d', 'sac_4d', 'exports_4d', 'dcc_4d', 'net_dcd_4d', 'sjr_4d', 'tide_4d', 'smscg_4d', 'sac_5d', \n",
-    "    'exports_5d', 'dcc_5d', 'net_dcd_5d', 'sjr_5d', 'tide_5d', 'smscg_5d', 'sac_6d', 'exports_6d', 'dcc_6d', \n",
-    "    'net_dcd_6d', 'sjr_6d', 'tide_6d', 'smscg_6d', 'sac_7d', 'exports_7d', 'dcc_7d', 'net_dcd_7d', 'sjr_7d', \n",
-    "    'tide_7d', 'smscg_7d', 'sac_1ave', 'exports_1ave', 'dcc_1ave', 'net_dcd_1ave', 'sjr_1ave', 'tide_1ave', \n",
-    "    'smscg_1ave', 'sac_2ave', 'exports_2ave', 'dcc_2ave', 'net_dcd_2ave', 'sjr_2ave', 'tide_2ave', 'smscg_2ave', \n",
-    "    'sac_3ave', 'exports_3ave', 'dcc_3ave', 'net_dcd_3ave', 'sjr_3ave', 'tide_3ave', 'smscg_3ave', 'sac_4ave', \n",
-    "    'exports_4ave', 'dcc_4ave', 'net_dcd_4ave', 'sjr_4ave', 'tide_4ave', 'smscg_4ave', 'sac_5ave', 'exports_5ave', \n",
-    "    'dcc_5ave', 'net_dcd_5ave', 'sjr_5ave', 'tide_5ave', 'smscg_5ave', 'sac_6ave', 'exports_6ave', 'dcc_6ave', \n",
-    "    'net_dcd_6ave', 'sjr_6ave', 'tide_6ave', 'smscg_6ave', 'sac_7ave', 'exports_7ave', 'dcc_7ave', 'net_dcd_7ave', \n",
-    "    'sjr_7ave', 'tide_7ave', 'smscg_7ave', 'sac_8ave', 'exports_8ave', 'dcc_8ave', 'net_dcd_8ave', 'sjr_8ave', \n",
-    "    'tide_8ave', 'smscg_8ave', 'sac_9ave', 'exports_9ave', 'dcc_9ave', 'net_dcd_9ave', 'sjr_9ave', 'tide_9ave', \n",
-    "    'smscg_9ave', 'sac_10ave', 'exports_10ave', 'dcc_10ave', 'net_dcd_10ave', 'sjr_10ave', 'tide_10ave', 'smscg_10ave'\n",
-    "]\n",
-    "\n",
-    "\n",
-    "\n",
-    "X_new = [new_data[feature] for feature in num_features]\n",
-    "predictions = loaded_model.predict(X_new)\n",
-    "\n",
-    "from sklearn.metrics import mean_squared_error, r2_score\n",
-    "df = pd.read_csv('C:/Users/hzamanis/Documents/ann_CalSim_EC_estimator/ann_CalSim_EC_estimator/Inputs/inputs.csv')\n",
-    "df['ANN_EC']= predictions\n",
-    "total_rows = df.shape[0]\n",
-    "test_rows = 6039\n",
-    "train_rows = total_rows - test_rows\n",
-    "df_train = df.tail(train_rows)\n",
-    "df_test = df.head(test_rows)\n",
-    "\n",
-    "r2 = r2_score(df['EC'], df['ANN_EC'])\n",
-    "r2_Test = r2_score(df_test['EC'], df_test['ANN_EC'])\n",
-    "r2_Train = r2_score(df_train['EC'], df_train['ANN_EC'])\n",
-    "print('R2_Train:',round(r2_Train,2),', R2_Test:',round(r2_Test,2),', R2_All:',round(r2,2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 99,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'num_features' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mf:\\projects\\ann_calsim_ec_estimator\\train.ipynb Cell 17\u001b[0m line \u001b[0;36m1\n\u001b[0;32m      <a href='vscode-notebook-cell:/f%3A/projects/ann_calsim_ec_estimator/train.ipynb#X20sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m snv\u001b[39m=\u001b[39m[\u001b[39m22290.01548\u001b[39m,\t\u001b[39m1734.942768\u001b[39m,\t\u001b[39m0\u001b[39m,\t\u001b[39m-\u001b[39m\u001b[39m9.952951431\u001b[39m,\t\u001b[39m6335.896343\u001b[39m,\t\u001b[39m5.556299686\u001b[39m,\t\u001b[39m1\u001b[39m,\t\u001b[39m22333.70068\u001b[39m,\t\u001b[39m1734.942768\u001b[39m,\t\u001b[39m0\u001b[39m,\t\u001b[39m-\u001b[39m\u001b[39m9.952951431\u001b[39m,\t\u001b[39m6355.438848\u001b[39m,\t\u001b[39m5.346099854\u001b[39m,\t\u001b[39m1\u001b[39m,\t\u001b[39m22358.59029\u001b[39m,\t\n\u001b[0;32m      <a href='vscode-notebook-cell:/f%3A/projects/ann_calsim_ec_estimator/train.ipynb#X20sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m     \u001b[39m1734.942768\u001b[39m,\t\u001b[39m0\u001b[39m,\t\u001b[39m-\u001b[39m\u001b[39m9.952951431\u001b[39m,\t\u001b[39m6366.577922\u001b[39m,\t\u001b[39m4.948599815\u001b[39m,\t\u001b[39m1\u001b[39m,\t\u001b[39m22373.94862\u001b[39m,\t\u001b[39m1734.942768\u001b[39m,\t\u001b[39m0\u001b[39m,\t\u001b[39m-\u001b[39m\u001b[39m9.952951431\u001b[39m,\t\u001b[39m6373.457067\u001b[39m,\t\u001b[39m4.631799698\u001b[39m,\t\u001b[39m1\u001b[39m,\t\u001b[39m22383.92889\u001b[39m,\t\u001b[39m1734.942768\u001b[39m,\t\n\u001b[0;32m      <a href='vscode-notebook-cell:/f%3A/projects/ann_calsim_ec_estimator/train.ipynb#X20sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m     \u001b[39m0\u001b[39m,\t\u001b[39m-\u001b[39m\u001b[39m9.952951431\u001b[39m,\t\u001b[39m6377.9341\u001b[39m,\t\u001b[39m4.35890007\u001b[39m,\t\u001b[39m1\u001b[39m,\t\u001b[39m22390.61113\u001b[39m,\t\u001b[39m1734.942768\u001b[39m,\t\u001b[39m0\u001b[39m,\t\u001b[39m-\u001b[39m\u001b[39m9.952951431\u001b[39m,\t\u001b[39m6380.939775\u001b[39m,\t\u001b[39m4.41920042\u001b[39m,\t\u001b[39m1\u001b[39m,\t\u001b[39m22395.12267\u001b[39m,\t\u001b[39m1734.942768\u001b[39m,\t\u001b[39m0\u001b[39m,\t\u001b[39m-\u001b[39m\u001b[39m9.952951431\u001b[39m,\t\u001b[39m6382.978897\u001b[39m,\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/f%3A/projects/ann_calsim_ec_estimator/train.ipynb#X20sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m     \u001b[39m7116.881175\u001b[39m,\t\u001b[39m0\u001b[39m,\t\u001b[39m261.732219\u001b[39m,\t\u001b[39m3451.610338\u001b[39m,\t\u001b[39m6.283490961\u001b[39m,\t\u001b[39m1\u001b[39m,\t\u001b[39m30086.23375\u001b[39m,\t\u001b[39m7116.881175\u001b[39m,\t\u001b[39m0\u001b[39m,\t\u001b[39m261.732219\u001b[39m,\t\u001b[39m3441.636806\u001b[39m,\t\u001b[39m6.154863574\u001b[39m,\t\u001b[39m1\u001b[39m\n\u001b[0;32m     <a href='vscode-notebook-cell:/f%3A/projects/ann_calsim_ec_estimator/train.ipynb#X20sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m ]  \u001b[39m# Numerical parameters ((the time serie values of current day + 7 days ago + 10 blocks of previous 11 days)= 118 days of data  (18 input values*7 predictors = 126 values as input parameters)\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/f%3A/projects/ann_calsim_ec_estimator/train.ipynb#X20sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m single_sample_list \u001b[39m=\u001b[39m []\n\u001b[1;32m---> <a href='vscode-notebook-cell:/f%3A/projects/ann_calsim_ec_estimator/train.ipynb#X20sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mfor\u001b[39;00m value, feature_name \u001b[39min\u001b[39;00m \u001b[39mzip\u001b[39m(snv , num_features ):\n\u001b[0;32m     <a href='vscode-notebook-cell:/f%3A/projects/ann_calsim_ec_estimator/train.ipynb#X20sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     single_sample_df \u001b[39m=\u001b[39m pd\u001b[39m.\u001b[39mDataFrame([value], columns\u001b[39m=\u001b[39m[feature_name])\n\u001b[0;32m     <a href='vscode-notebook-cell:/f%3A/projects/ann_calsim_ec_estimator/train.ipynb#X20sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     single_sample_list\u001b[39m.\u001b[39mappend(single_sample_df)\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'num_features' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "###### Single sample Test ####\n",
-    "snv=[22290.01548,\t1734.942768,\t0,\t-9.952951431,\t6335.896343,\t5.556299686,\t1,\t22333.70068,\t1734.942768,\t0,\t-9.952951431,\t6355.438848,\t5.346099854,\t1,\t22358.59029,\t\n",
-    "    1734.942768,\t0,\t-9.952951431,\t6366.577922,\t4.948599815,\t1,\t22373.94862,\t1734.942768,\t0,\t-9.952951431,\t6373.457067,\t4.631799698,\t1,\t22383.92889,\t1734.942768,\t\n",
-    "    0,\t-9.952951431,\t6377.9341,\t4.35890007,\t1,\t22390.61113,\t1734.942768,\t0,\t-9.952951431,\t6380.939775,\t4.41920042,\t1,\t22395.12267,\t1734.942768,\t0,\t-9.952951431,\t6382.978897,\n",
-    "    4.609300137,\t1,\t22398.10862,\t1734.942768,\t0,\t-9.952951431,\t6384.340773,\t4.885900021,\t1,\t22391.45013,\t1734.942768,\t0,\t-9.952951431,\t6381.83493,\t4.891309001,\t1,\t\n",
-    "    20455.31666,\t2414.233676,\t0,\t112.3443529,\t5732.819247,\t5.957036409,\t1,\t13808.89333,\t5471.04276,\t0,\t662.6822227,\t3675.128419,\t4.531345497,\t1,\t13727.31347,\t5471.04276,\t\n",
-    "    0,\t662.6822227,\t3633.416262,\t5.270854516,\t1,\t15871.35388,\t6109.499427,\t0,\t435.5286874,\t3856.175652,\t5.932472706,\t1,\t18889.5898,\t7226.798596,\t0,\t38.01000071,\t4164.807632,\n",
-    "    4.630736351,\t1,\t19086.62041,\t7226.798596,\t0,\t38.01000071,\t4154.380322,\t5.861154643,\t1,\t27995.04227,\t7136.866161,\t0,\t221.055452,\t3569.548577,\t5.481718107,\t1,\t29834.38514,\n",
-    "    7116.881175,\t0,\t261.732219,\t3451.610338,\t6.283490961,\t1,\t30086.23375,\t7116.881175,\t0,\t261.732219,\t3441.636806,\t6.154863574,\t1\n",
-    "]  # Numerical parameters ((the time serie values of current day + 7 days ago + 10 blocks of previous 11 days)= 118 days of data  (18 input values*7 predictors = 126 values as input parameters)\n",
-    "\n",
-    "\n",
-    "single_sample_list = []\n",
-    "for value, feature_name in zip(snv , num_features ):\n",
-    "    single_sample_df = pd.DataFrame([value], columns=[feature_name])\n",
-    "    single_sample_list.append(single_sample_df)\n",
-    "\n",
-    "# Predict for the single sample\n",
-    "p = loaded_model.predict(single_sample_list)\n",
-    "\n",
-    "print('Single Sample Prediction:', p)"
-   ]
+   "source": []
   }
  ],
  "metadata": {
